[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/LoadWindow/LoadWindow.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60

[node name="Panel" type="Panel" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0.901961 )
margin_left = 60.0
margin_top = 60.0
margin_right = 1988.0
margin_bottom = 1140.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="CancelButton" type="Button" parent="MarginContainer/Panel"]
margin_left = 1846.0
margin_top = 29.0
margin_right = 1887.0
margin_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1888.0
margin_bottom = 1040.0
rect_pivot_offset = Vector2( -510, 25 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 1848.0
margin_bottom = 14.0
text = "LOAD project"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1848.0
margin_bottom = 1000.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1848.0
margin_bottom = 14.0
text = "Available files"

[node name="AvailableProjectsList" type="ItemList" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1848.0
margin_bottom = 956.0
size_flags_vertical = 3
allow_reselect = true
auto_height = true

[connection signal="pressed" from="MarginContainer/Panel/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/AvailableProjectsList" to="." method="_on_available_projects_list_item_selected"]
